iniファイルの初期値と説明文を修正

--- a/abema-onair-schedule/Resources/default-ini.ini
+++ b/abema-onair-schedule/Resources/default-ini.ini
@@ -1,19 +1,33 @@
-﻿jsonLogDirectory=./logJson/
-# 1ファイル 横軸はチャンネル 取得した全て
+﻿# 指定する値は全てディレクトリです。ファイル名を指定する書き方はないです
+# 不要なファイルは # でコメントアウトしてください。 
+# 「jsonLogDirectory=」のように空指定にしただけだと、同じディレクトリと判断します
+#
+# 2016/04/28時点では今日を含めて±一週間 つまり合計二週間分のデータを受信しています
+# ですので「全ての情報」とは二週間分を意味します
+# 「未来の一週間のみ」は昨日～未来一週間 です
+
+
+
+# チャンネルの一日ごとの番組表データの生データ
+# jsonLogDirectory=./logJson/
+
+# 1ファイル 横軸はチャンネル 取得した全ての情報が含まれている番組表html
 programAllDirectory=./
-# チャンネルごとのファイル 横軸は日 取得した全て
+# チャンネルごとのファイル 横軸は日 取得した全て。特定のチャンネルだけの週間番組表
 programChannelAllDirectory=./allChannel/
+
 # 1ファイル 横軸はチャンネル 未来の一週間のみ
 programLaterDirectory=./
 # チャンネルごとのファイル 横軸は日 未来の一週間のみ
 programChannelLaterDirectory=./laterChannel/
 
-programAllLogDirectory=./allLog/
-programChannelAllLogDirectory=./allChannelLog/
-programLaterLogDirectory=./laterLog/
-programChannelLaterLogDirectory=./laterChannelLog/
+# 番組表のファイルに日付を追加します。過去の番組表を残したい人はon
+# programAllLogDirectory=./allLog/
+# programChannelAllLogDirectory=./allChannelLog/
+# programLaterLogDirectory=./laterLog/
+# programChannelLaterLogDirectory=./laterChannelLog/
 
-# チャンネルごとのファイル 全番組のログ 
+# チャンネルごとのファイル 全番組のログのテキストファイル
 allProgramCsvLogDirectory=./textAllProgramLog/
-# チャンネルごとのファイル 読みやすい
+# チャンネルごとのファイル 新番組を優先表示したり人間に読みやすいテキスト
 reprtProgramDirectory=./textReport/
